--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/soleman16/FriendFinder#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.12",
     "path": "^0.12.7"
   }
 }
